styled the existing html file

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     background-color: burlywood;
 }
 h2 {
@@ -7,4 +7,4 @@ h2 {
     color: blue;
     font-size: xxx-large;
     font-style: italic;
-} */
+}
