--- a/index.css
+++ b/index.css
@@ -6,5 +6,28 @@ h2 {
     text-align: center;
     color: blue;
     font-size: xxx-large;
+    font-style: italic;  
+}
+ul {
+    text-align: center;
+    list-style: none;
+    font-size: 200%;
+}
+h4 {
+    font-family: 'Bungee Inline', cursive;
+    font-weight: 800;
     font-style: italic;
+    color: rebeccapurple;
+    font-size: xx-large;
+    text-align: center;
+}
+.intro {
+    display: flex;
+    flex-direction: row;
+    margin-right: 20px;
+}
+.intro img {
+    margin-right: 50px;
+    box-shadow: 0 0 20px 10px black;
+    margin-left: 50px;
 }
