--- a/index.css
+++ b/index.css
@@ -1,33 +1,105 @@
+div {
+    display: block;
+}
 body {
     background-color: burlywood;
+    background-image: url("https://media.giphy.com/media/3oxHQERYBueKZdAb9m/giphy.gif");
+    background-repeat:repeat;
+    background-size: 100%;
+}
+.first img {
+    width: 100%;
+}
+.video {
+    position: fixed;
+    margin: 20px;
+    float: right;
 }
 h2 {
     font-family: 'Staatliches', cursive;
     text-align: center;
-    color: blue;
+    color: black;
     font-size: xxx-large;
     font-style: italic;  
+    background-color: white;
 }
 ul {
     text-align: center;
     list-style: none;
     font-size: 200%;
+    color: cornsilk;
 }
 h4 {
     font-family: 'Bungee Inline', cursive;
     font-weight: 800;
     font-style: italic;
-    color: rebeccapurple;
+    color:black;
     font-size: xx-large;
     text-align: center;
+    background-color: white;
 }
 .intro {
     display: flex;
     flex-direction: row;
-    margin-right: 20px;
+    margin-right: 10px;
+    background-color: chartreuse;
+    padding: 20px;
+    
 }
 .intro img {
     margin-right: 50px;
     box-shadow: 0 0 20px 10px black;
-    margin-left: 50px;
+    
+}
+.rekles {
+    display: flex;
+    color: cornsilk;
+    width: fit-content;
+    background-color: darkcyan;
+    width: 50%;
+
+    
+}
+.rekles img {
+    margin-right: 20px;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.zilla {
+    display: flex;
+    color: white;
+    background-color:darkkhaki;
+    margin: 10px;
+   padding: 20px;
+    width: 50%;
+    float: right;
+}.zilla img {
+    padding: 20px;
+}
+
+.seska {
+    display: flex;
+    background-color:khaki;
+    width: 60%;
+    margin: 20px;
+    padding: 20px;
+}
+.seska img {
+    padding-right: 20px;
+}
+.swat {
+    display:flex;
+    background-color: coral;
+    width: 50%;
+    padding: 20px;
+    margin: 20px;
+    float: right;
+}
+.swat img {
+    padding-left: 20px;
+}
+.songs{
+    clear: right;
+    margin-bottom: 0px;
 }
